# QuartoQuest

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DockerFile  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  temp_code.py
.github/workflows/: autograder.yml  publish-docs.yml  publish.yml  python-tests.yml
docs/: conf.py  demo.ipynb  demo.qmd  index.rst  introduction.rst  netlify.toml  requirements.txt  usage_instructions.rst
docs/_static/: jupyterquest.pptx
html/: .buildinfo  installation_guide.html  objects.inv  search.html  searchindex.js
html/.doctrees/: configuration.doctree  environment.pickle  getting_started.doctree  index.doctree  installation_guide.doctree  introduction.doctree  usage_instructions.doctree
html/_sources/: getting_started.rst.txt  installation_guide.rst.txt
jupyterquest/: autograder.py  code_quality_check.py  commit_analysis.py  dependency_checks.py  generate_markdown_report.py  parse_ipynb.py  repo_structure_check.py  security_checks.py
quartoquest/: autograder.py  code_style_check.py  commit_analysis.py  generate_markdown_report.py  parse_qmd.py  repo_structure_check.py  setup.py
quartoquest/tests/: test_parse_qmd.py  (+3 more)
scripts/: autograder.py  code_quality_check.py  generate_markdown_report.py  parse_qmd.py  repo_structure_check.py
tests/: test_autograder.py  test_code_quality_check.py  test_code_style_check.py  test_commit_analysis.py  test_dependency_checks.py  test_generate_markdown_report.py  test_parse_ipynb.py  test_parse_qmd.py  test_repo_structure_check.py  test_security_checks.py
(+25 files in other folders)
