[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quartoquest"
version = "0.1.0"
description = "A Python package for automating grading of Quarto markdown files."
readme = "README.md"
authors = [{name = "Greg Chism", email = "gchism@arizona.edu"}]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["education", "autograder", "quarto", "markdown"]
dependencies = [
    "radon>=6.0.1",
    "GitPython>=3.1.41",
    "markdown>=3.5.2",
    "flake8>=7.0.0",
    "pylint>=3.0.3",
    "pandoc>=2.3",
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "nbformat>=5.9.2"
    ]

[project.urls]
Home = "https://github.com/Gchism94/quartoquest"
